WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184752
Fix rendering of WKRemoteView layers in the simulator
https://bugs.webkit.org/show_bug.cgi?id=184752
Summary
Fix rendering of WKRemoteView layers in the simulator
Jer Noble
Reported
2018-04-18 13:23:50 PDT
Fix rendering of WKRemoteView layers in the simulator
Attachments
Patch
(2.01 KB, patch)
2018-04-18 13:25 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-04-18 13:25:20 PDT
<
rdar://problem/39538232
>
Jer Noble
Comment 2
2018-04-18 13:25:57 PDT
Created
attachment 338253
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-18 14:17:41 PDT
Comment on
attachment 338253
[details]
Patch Clearing flags on attachment: 338253 Committed
r230780
: <
https://trac.webkit.org/changeset/230780
>
WebKit Commit Bot
Comment 4
2018-04-18 14:17:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug