Fix rendering of WKRemoteView layers in the simulator https://bugs.webkit.org/show_bug.cgi?id=184752

Reviewed by Tim Horton.

* Platform/mac/LayerHostingContext.mm:
(WebKit::LayerHostingContext::createForExternalHostingProcess):


Canonical link: https://commits.webkit.org/200262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230780 268f45cc-cd09-0410-ab3c-d52691b4dbfc